--- a/Dz-5/css/style.css
+++ b/Dz-5/css/style.css
@@ -1,5 +1,19 @@
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+.board{
+	width: 50vw;
+	height: 50vw;
+	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap;
+}
 .cell{
-    height: 150px;
-    width: 150px;
-    background: red;
+    height: calc(50vw / 8);
+    width: calc(50vw / 8);
+    background: black;
+	border: solid 1px green;
+	display: inline-block;
 }
