--- a/Dz-6/Slider/css/style.css
+++ b/Dz-6/Slider/css/style.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	transition: 1s;
+	transition: 2s;
 }
 
 
@@ -10,10 +10,20 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 50px;
 }
 .buttons {
 	display: flex;
 	justify-content: space-around;
+}
+button{
+	height: 30px;
+	padding: 5px;
+	margin: 20px 150px;
+	background: green;
+	border: none;
+	color: white;
+	cursor: pointer;
 }
 .slider {
 	border: solid 2px blue;
@@ -21,6 +31,7 @@
 	height: 300px;
 	overflow: hidden;
 	position: relative;
+	background: lightblue;
 }
 
 .slider img{
