--- a/Dz-6/Slider/css/style.css
+++ b/Dz-6/Slider/css/style.css
@@ -7,50 +7,53 @@
 }
 
 
-.slider-container {
+.slider {
+    width: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin: 20px auto;
 }
 
-.buttons {
-    width: 500px;
+.slider-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 30px;
 }
 
-.buttons img {
-    width: 100px;
-    height: 60px;
-}
-
-button {
-    height: 30px;
-    padding: 5px;
-    background: green;
-    border: none;
-    color: white;
-    cursor: pointer;
-}
-
-.slider {
+.slider-slides {
     width: 500px;
     height: 300px;
-    overflow: hidden;
     position: relative;
-    background: lightblue;
+    overflow: hidden;
 }
 
-.slider img {
+.slider-slides img {
     position: absolute;
     opacity: 0;
     transition: 1s;
 }
 
-.slider-container .active {
+.slider-preview {
+    margin: 20px;
+}
+
+.slider-preview img {
+    width: 100px;
+    height: 60px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+
+.slider .active {
     opacity: 1;
-    outline: solid 2px blue;
+    outline: solid 4px black;
+}
+
+.slider button {
+    border: none;
+    background-image: linear-gradient(to top , #544e52fa, #32373096);
+    color: white;
+    padding: 20px;
+    cursor: pointer;
+    outline: none;
 }
